notion of creating more separate environments
We have created a place for named environments to go as subfolders

Signed-off-by: Kingdon Barrett <kingdon@weave.works>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/.terraform
-/kubeconfig-temp.yaml
-/id_ed25519
-/terraform.tfstate
+/**/.terraform
+/**/kubeconfig-temp.yaml
+/**/id_ed25519
+/**/terraform.tfstate
